--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pydantic-settings (>=2.11.0,<3.0.0)",
     "bcrypt (>=5.0.0,<6.0.0)",
     "pyjwt (>=2.10.1,<3.0.0)",
+    "python-multipart (>=0.0.20,<0.0.21)",
 ]
 
 
